<resources>
    <string name="account">Профиль</string>
    <string name="enter">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_login">Введите логин</string>
    <string name="btn_enter">Войти</string>
    <string name="app_name">Журнал</string>
    <string name="info">Ваши дисциплины</string>
    <string name="button_text">Добавить\n дисциплину</string>
    <string name="info2">Добавление дисциплины</string>
    <string name="FIO">ФИО студента:</string>
    <string name="Languages">ЯП:</string>
    <string name="IDE">IDE:</string>
    <string name="button_add">Подтвердить</string>
    <string name="button_cancel">Назад</string>
    <string name="info_update">Редактирование дисциплины</string>
    <string name="button_update">Обновить</string>
    <string name="info_groups">Группы</string>
    <string name="button_addgroup">Добавить\n группу</string>
    <string name="info_addgroups">Добавление группы</string>
    <string name="group_name">Название группы</string>
    <string name="info_students">Студенты</string>
    <string name="button_students">Добавить\n студента</string>
    <string name="subject_name">Название дисциплины</string>
    <string name="Gender">Пол</string>
    <string name="info_add_student">Добавление студента</string>
    <string name="year_header">Введите год</string>
    <string name="group_year">Год группы</string>
    <string name="title_activity_journal">JournalActivity</string>
</resources>