<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".UpdateActivities.UpdateSubjectActivity"
    android:id="@+id/activity_update_subject">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_name"/>

    <EditText
        android:id="@+id/name_input_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Languages"/>

    <Spinner
        android:id="@+id/lang_input_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IDE"/>

    <Spinner
        android:id="@+id/ide_input_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:inputType="text"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="@string/button_cancel"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck"
            android:id="@+id/Cancel_Button_update"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="@string/button_update"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck"
            android:id="@+id/Update_Button"/>
    </LinearLayout>

</LinearLayout>